--- a/Frontend/Kotlin/MainProject/app/src/main/AndroidManifest.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainPage"
             android:exported="false" />
         <activity
             android:name=".Splash"
