--- a/Frontend/Kotlin/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Frontend/Kotlin/MyApplication/app/src/main/AndroidManifest.xml
@@ -12,21 +12,8 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".TopPage"
+            android:name=".MainActivity"
             android:exported="false" />
-        <activity
-            android:name=".MainPage"
-            android:exported="false" />
-        <activity
-            android:name=".Splash"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
