--- a/Frontend/Kotlin/MainProject/app/src/main/AndroidManifest.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".login_activity"
+            android:exported="false" />
+        <activity
             android:name=".newnews"
             android:exported="false" />
         <activity
