--- a/Frontend/ProperMainProject/app/src/main/AndroidManifest.xml
+++ b/Frontend/ProperMainProject/app/src/main/AndroidManifest.xml
@@ -12,14 +12,30 @@
         android:theme="@style/Theme.ProjectZ"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".how_we_do_it"
+            android:exported="false" />
+        <activity
+            android:name=".contact_us"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".signUp"
+            android:exported="false" />
+        <activity
+            android:name=".Splash"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainPage"
+            android:exported="false" />
     </application>
 
 </manifest>
