--- a/Frontend/SuperMainMain/build.gradle
+++ b/Frontend/SuperMainMain/build.gradle
@@ -1,4 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {url "https://chaquo.com/maven"}
+    }
+    dependencies {
+        classpath "com.chaquo.python:gradle:12.0.0"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
