--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -13,6 +14,24 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
+        sourceSets {
+            main {
+                python {
+                    srcDirs = ["src/main/python"]
+                }
+            }
+        }
+
+        python {
+            buildPython "/urs/local/bin/python3"
+//            buildPython "C:/Users/MSI/AppData/Local/Programs/Python/Python310"
+            buildPython "python3"
+        }
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
