Added Python Integration

--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name=".contact_us"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity1"
             android:exported="false">
         </activity>
     </application>
