--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -14,6 +14,9 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        buildFeatures{
+            viewBinding = true
+        }
 
         sourceSets {
             main {
