--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -30,6 +30,12 @@ android {
             buildPython "/urs/local/bin/python3"
 //            buildPython "C:/Users/MSI/AppData/Local/Programs/Python/Python310"
             buildPython "python3"
+
+//            pip {
+//                install "numpy"
+//                install "pandas"
+//                install "joblib"
+//            }
         }
 
         ndk {
