--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -33,18 +33,20 @@ android {
 
             pip {
                 install "numpy"
-//                install "string"
                 install "nltk"
-//                install from nltk.corpus import stopwords
                 install "requests"
                 install "bs4"
-//                from bs4 import BeautifulSoup
-//                install "urllib"
-//                from urllib.request import urlopen
                 install "pandas"
+
+//                install from nltk.corpus import stopwords
+//                from bs4 import BeautifulSoup
 //                import pandas as pd
-//                install "os"
-//                install "csv"
+
+//                install "string" Could not find a version that satisfies the requirement sssss
+//                install "urllib" Could not find a version that satisfies the requirement
+//                from urllib.request import urlopen
+//                install "os" Could not find a version that satisfies the requirement
+//                install "csv" Could not find a version that satisfies the requirement
             }
         }
 
