--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Sdgptest2"
         tools:targetApi="31">
         <activity
+            android:name=".PasathDetails"
+            android:exported="false" />
+        <activity
             android:name=".Splash"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
@@ -35,8 +38,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity1"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
