--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Sdgptest2"
         tools:targetApi="31">
         <activity
+            android:name=".SaicharanDetails"
+            android:exported="false" />
+        <activity
             android:name=".PasathDetails"
             android:exported="false" />
         <activity
@@ -38,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity1"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
