--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -28,8 +28,9 @@ android {
 
         python {
             buildPython "/urs/local/bin/python3"
+            buildPython "C:/Users/MSI/AppData/Local/Programs/Python/Python310/python.exe"
 //            buildPython "C:/Users/MSI/AppData/Local/Programs/Python/Python310"
-            buildPython "python3"
+//            buildPython "python3"
 
             pip {
                 install "numpy"
