--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Sdgptest2"
         tools:targetApi="31">
         <activity
+            android:name=".burgerMenu"
+            android:exported="false" />
+        <activity
             android:name=".YasinduDetails"
             android:exported="false" />
         <activity
