--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -6,11 +6,14 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/fake_news"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sdgptest2"
         tools:targetApi="31">
+        <activity
+            android:name=".faq"
+            android:exported="false" />
         <activity
             android:name=".burgerMenu"
             android:exported="false" />
