--- a/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
+++ b/Frontend/SuperMainMain/app/src/main/AndroidManifest.xml
@@ -2,21 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
+        android:allowClearUserData="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:debuggable="true"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/fake_news"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sdgptest2"
-        tools:targetApi="31"
-        android:debuggable="true"
         android:vmSafeMode="true"
-        android:allowClearUserData="true"
-        android:hardwareAccelerated="true"
-        tools:ignore="HardcodedDebugMode">
+        tools:ignore="HardcodedDebugMode"
+        tools:targetApi="31">
         <activity
             android:name=".faq"
             android:exported="false" />
@@ -56,7 +59,13 @@
             android:exported="false" />
         <activity
             android:name=".how_we_do_it"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".contact_us"
             android:exported="false" />
