--- a/Frontend/SuperMainMain/app/build.gradle
+++ b/Frontend/SuperMainMain/app/build.gradle
@@ -75,5 +75,6 @@ android {
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
         implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+        implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     }
 }
